--- a/NOVA/Views/IK/PersonelBilgi.cshtml
+++ b/NOVA/Views/IK/PersonelBilgi.cshtml
@@ -1756,6 +1756,8 @@
 
 
                                                     <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.PersonelBilgi.SUBE == "EFECE 2")
                                                 {
@@ -1769,6 +1771,8 @@
 
 
                                                     <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.PersonelBilgi.SUBE == "EFECE 3")
                                                 {
@@ -1782,6 +1786,8 @@
 
 
                                                     <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.PersonelBilgi.SUBE == "EFECE 4")
                                                 {
@@ -1795,6 +1801,38 @@
 
 
                                                     <option value="EFECE 4" selected>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.PersonelBilgi.SUBE == "EFECE 5")
+                                                {
+
+                                                    <option value="EFECE 1" disabled>EFECE 1</option>
+
+
+                                                    <option value="EFECE 2" disabled>EFECE 2</option>
+
+                                                    <option value="EFECE 3" disabled>EFECE 3</option>
+
+
+                                                    <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" selected>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.PersonelBilgi.SUBE == "SERBEST")
+                                                {
+
+                                                    <option value="EFECE 1" disabled>EFECE 1</option>
+
+
+                                                    <option value="EFECE 2" disabled>EFECE 2</option>
+
+                                                    <option value="EFECE 3" disabled>EFECE 3</option>
+
+
+                                                    <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                    <option value="SERBEST" selected>SERBEST</option>
                                                 }
                                                 else
                                                 {
@@ -1808,6 +1846,8 @@
 
 
                                                     <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
 
 
@@ -4199,6 +4239,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.PersonelBilgi.SUBE == "EFECE 2")
                                                 {
@@ -4212,6 +4254,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.PersonelBilgi.SUBE == "EFECE 3")
                                                 {
@@ -4225,6 +4269,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.PersonelBilgi.SUBE == "EFECE 4")
                                                 {
@@ -4238,6 +4284,38 @@
 
 
                                                     <option value="EFECE 4" selected>EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.PersonelBilgi.SUBE == "EFECE 5")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5" selected>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.PersonelBilgi.SUBE == "SERBEST")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST" selected>SERBEST</option>
                                                 }
                                                 else
                                                 {
@@ -4251,6 +4329,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
 
 
