--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -2321,6 +2321,9 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 2")
                                                 {
@@ -2334,6 +2337,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 3")
                                                 {
@@ -2347,6 +2352,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 4")
                                                 {
@@ -2360,6 +2367,38 @@
 
 
                                                     <option value="EFECE 4" selected>EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "EFECE 5")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5" selected>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "SERBEST")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST" selected>SERBEST</option>
                                                 }
                                                 else
                                                 {
@@ -2373,6 +2412,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
 
 
@@ -3467,6 +3508,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 2")
                                                 {
@@ -3480,6 +3523,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 3")
                                                 {
@@ -3493,6 +3538,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 4")
                                                 {
@@ -3506,6 +3553,38 @@
 
 
                                                     <option value="EFECE 4" selected>EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "EFECE 5")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5" selected>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "SERBEST")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST" selected>SERBEST</option>
                                                 }
                                                 else
                                                 {
@@ -3519,6 +3598,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
 
 
@@ -5195,6 +5276,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 2")
                                                 {
@@ -5208,6 +5291,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 3")
                                                 {
@@ -5221,6 +5306,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 4")
                                                 {
@@ -5234,6 +5321,38 @@
 
 
                                                     <option value="EFECE 4" selected>EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "EFECE 5")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5" selected>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "SERBEST")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5" >EFECE 5</option>
+                                                    <option value="SERBEST" selected>SERBEST</option>
                                                 }
                                                 else
                                                 {
@@ -5247,6 +5366,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
 
 
