--- a/NOVA/Views/IK/PersonelSubeYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelSubeYonetim.cshtml
@@ -2194,6 +2194,8 @@
 
 
                                                     <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                    <option value="SERBEST" disabled>SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 2")
                                                 {
@@ -2207,6 +2209,8 @@
 
 
                                                     <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                    <option value="SERBEST" disabled>SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 3")
                                                 {
@@ -2220,6 +2224,8 @@
 
 
                                                     <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                    <option value="SERBEST" disabled>SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 4")
                                                 {
@@ -2233,6 +2239,37 @@
 
 
                                                     <option value="EFECE 4" selected>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "EFECE 5")
+                                                {
+
+                                                    <option value="EFECE 1" disabled>EFECE 1</option>
+
+
+                                                    <option value="EFECE 2" disabled>EFECE 2</option>
+
+                                                    <option value="EFECE 3" disabled>EFECE 3</option>
+
+
+                                                    <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" selected>EFECE 5</option>
+                                                    <option value="SERBEST" disabled>SERBEST</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "SERBEST")
+                                                {
+
+                                                    <option value="EFECE 1" disabled>EFECE 1</option>
+
+
+                                                    <option value="EFECE 2" disabled>EFECE 2</option>
+
+                                                    <option value="EFECE 3" disabled>EFECE 3</option>
+
+
+                                                    <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                    <option value="SERBEST" selected>SERBEST</option>
                                                 }
                                                 else
                                                 {
@@ -2246,6 +2283,8 @@
 
 
                                                     <option value="EFECE 4" disabled>EFECE 4</option>
+                                                    <option value="EFECE 5" disabled>EFECE 5</option>
+                                                    <option value="SERBEST" disabled>SERBEST</option>
                                                 }
 
 
@@ -3340,6 +3379,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 2")
                                                 {
@@ -3353,6 +3394,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 3")
                                                 {
@@ -3366,6 +3409,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 4")
                                                 {
@@ -3379,6 +3424,38 @@
 
 
                                                     <option value="EFECE 4" selected>EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "EFECE 5")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5" selected>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "SERBEST")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST" selected>SERBEST</option>
                                                 }
                                                 else
                                                 {
@@ -3392,6 +3469,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
 
 
@@ -5068,6 +5147,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 2")
                                                 {
@@ -5081,6 +5162,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 3")
                                                 {
@@ -5094,6 +5177,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
                                                 else if (ViewBag.Personel.SUBE == "EFECE 4")
                                                 {
@@ -5107,6 +5192,37 @@
 
 
                                                     <option value="EFECE 4" selected>EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "EFECE 5")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5" selected>EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
+                                                }
+                                                else if (ViewBag.Personel.SUBE == "SERBEST")
+                                                {
+
+                                                    <option value="EFECE 1">EFECE 1</option>
+
+
+                                                    <option value="EFECE 2">EFECE 2</option>
+
+                                                    <option value="EFECE 3">EFECE 3</option>
+
+
+                                                    <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5" >EFECE 5</option>
+                                                    <option value="SERBEST" selected>SERBEST</option>
                                                 }
                                                 else
                                                 {
@@ -5120,6 +5236,8 @@
 
 
                                                     <option value="EFECE 4">EFECE 4</option>
+                                                    <option value="EFECE 5">EFECE 5</option>
+                                                    <option value="SERBEST">SERBEST</option>
                                                 }
 
 
